package config;

public class Database {
    public static final int INFANTRY_ATK = 20;
    public static final int INFANTRY_HP = 100;
    public static final int INFANTRY_DEF = 30;

    public static final int CAVALRY_ATK = 40;
    public static final int CAVALRY_HP = 90;
    public static final int CAVALRY_DEF = 20;

    public static final int SHIELD_DEF = 30;
    public static final int SWORD_ATK = 30;

    public static final int SHIELD_DEF_DECAY_PER_USE = 5;
    public static final int SHIELD_DEF_MIN = 5;

    public static final int SWORD_ATK_DECAY_PER_USE = 5;
    public static final int SWORD_ATK_MIN = 5;
}
